ecmascript/parser/tests/test262-error-references/fail/3c644395035bbe46.js.stderr
error: Identifier cannot follow number
 --> $DIR/tests/test262-parser/fail/3c644395035bbe46.js:1:2
  |
1 | 3in[]
  |  ^

